--- a/test.ipynb
+++ b/test.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpreter = tf.lite.Interpreter(model_path='./lite-model_movenet_singlepose_thunder_3.tflite')\n",
+    "interpreter = tf.lite.Interpreter(model_path='./models/thunder.tflite')\n",
     "interpreter.allocate_tensors()"
    ]
   },
@@ -156,15 +156,77 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot set tensor: Dimension mismatch. Got 192 but expected 256 for dimension 1 of input 0.",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n",
+      "19\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=12'>13</a>\u001b[0m output_details \u001b[39m=\u001b[39m interpreter\u001b[39m.\u001b[39mget_output_details()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=14'>15</a>\u001b[0m \u001b[39m# Make predictions\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=15'>16</a>\u001b[0m interpreter\u001b[39m.\u001b[39;49mset_tensor(input_details[\u001b[39m0\u001b[39;49m][\u001b[39m\"\u001b[39;49m\u001b[39mindex\u001b[39;49m\u001b[39m\"\u001b[39;49m], np\u001b[39m.\u001b[39;49marray(input_image))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=16'>17</a>\u001b[0m interpreter\u001b[39m.\u001b[39minvoke()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=17'>18</a>\u001b[0m keypoints_with_scores \u001b[39m=\u001b[39m interpreter\u001b[39m.\u001b[39mget_tensor(output_details[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py:607\u001b[0m, in \u001b[0;36mInterpreter.set_tensor\u001b[0;34m(self, tensor_index, value)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=590'>591</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_tensor\u001b[39m(\u001b[39mself\u001b[39m, tensor_index, value):\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=591'>592</a>\u001b[0m   \u001b[39m\"\"\"Sets the value of the input tensor.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=592'>593</a>\u001b[0m \n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=593'>594</a>\u001b[0m \u001b[39m  Note this copies data in `value`.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=604'>605</a>\u001b[0m \u001b[39m    ValueError: If the interpreter could not set the tensor.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=605'>606</a>\u001b[0m \u001b[39m  \"\"\"\u001b[39;00m\n\u001b[0;32m--> <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=606'>607</a>\u001b[0m   \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpreter\u001b[39m.\u001b[39;49mSetTensor(tensor_index, value)\n",
-      "\u001b[0;31mValueError\u001b[0m: Cannot set tensor: Dimension mismatch. Got 192 but expected 256 for dimension 1 of input 0."
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb Cell 9'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=14'>15</a>\u001b[0m \u001b[39m# Make predictions\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=15'>16</a>\u001b[0m interpreter\u001b[39m.\u001b[39mset_tensor(input_details[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m], np\u001b[39m.\u001b[39marray(input_image))\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=16'>17</a>\u001b[0m interpreter\u001b[39m.\u001b[39;49minvoke()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=17'>18</a>\u001b[0m keypoints_with_scores \u001b[39m=\u001b[39m interpreter\u001b[39m.\u001b[39mget_tensor(output_details[\u001b[39m0\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mindex\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lakpa/devs/personal_devs/pose_detection/test.ipynb#ch0000007?line=18'>19</a>\u001b[0m \u001b[39m# print(keypoints_with_scores)\u001b[39;00m\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py:875\u001b[0m, in \u001b[0;36mInterpreter.invoke\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=862'>863</a>\u001b[0m \u001b[39m\"\"\"Invoke the interpreter.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=863'>864</a>\u001b[0m \n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=864'>865</a>\u001b[0m \u001b[39mBe sure to set the input sizes, allocate tensors and fill values before\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=871'>872</a>\u001b[0m \u001b[39m  ValueError: When the underlying interpreter fails raise ValueError.\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=872'>873</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=873'>874</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_ensure_safe()\n\u001b[0;32m--> <a href='file:///Users/lakpa/opt/anaconda3/envs/tfenv/lib/python3.8/site-packages/tensorflow/lite/python/interpreter.py?line=874'>875</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_interpreter\u001b[39m.\u001b[39;49mInvoke()\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
